--- a/vehicle_main/package.xml
+++ b/vehicle_main/package.xml
@@ -11,7 +11,7 @@
     
   <depend>rclcpp</depend>
   <depend>std_msg</depend>  
-
+  <depend>car_interface</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
