--- a/vehicle_main/CMakeLists.txt
+++ b/vehicle_main/CMakeLists.txt
@@ -23,6 +23,9 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(Threads REQUIRED)
 find_package(car_interface REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
 
 add_executable(tm test_main.cpp encoder/encoder.cpp localize/localize.cpp motor_drive/motor_drive.cpp)
 ament_target_dependencies(tm rclcpp std_msgs car_interface)
